--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ iframe{
   <div class="content">
     <div class="row" id="k1">
     	<div>
-		<h4>Haii Zihan</h4> <br></div>
+		<h4>Haii Dek Zihann</h4> <br></div>
 		<div>
     	</div>
     	<div><br>
@@ -122,7 +122,7 @@ iframe{
 	  <h4> Kalo capek jangan lupa istirahat dan juga jangan lupa jaga kesehatan. </h4>
 	</div>
     <div class="row" id="k4">
-	  <h4>  Jangan sampai sakit yaa.. </h4>
+	  <h4>  Jangan sampai sakit okeyy.. </h4>
 	</div>
 	<div class="row" id="k1">
 	  <h4> Happy Birthday </h4>
